Automatizacion de los sliders

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             </div>
         </header>
         <section class="tioDimer_nuevos">
-            <div class="tioDimer_container sliderX">
+            <div class="tioDimer_container sliderX" data-automatico="true" data-duracion="7000">
                 <p class="encabezado">Recién llegados</p>
                 <div class="wrapperSlider">
                     <div class="contenedorProds">
@@ -330,7 +330,7 @@
             </div>
         </section>
         <section class="tioDimer_ofertas">
-            <div class="tioDimer_container sliderX">
+            <div class="tioDimer_container sliderX" data-automatico="true" data-duracion="7000">
                 <p class="encabezado">Ofertas</p>
                 <div class="wrapperSlider">
                     <div class="contenedorProds">
@@ -522,9 +522,7 @@
         </section>
 
 
-        <section class="merca2_bannerPublicidad">
-            <div class="noCargar merca2_container esResponsivX" data-imagen=""></div>
-        </section>
+   
         <section class="tioDimer_infoX">
             <div class="tioDimer_container">
                 <div class="innerInfo">
