--- a/index.html
+++ b/index.html
@@ -617,6 +617,21 @@
                 </div>
             </div>
         </section>
+        <section class="tioDimer_contacto">
+            <div class="tioDimer_container">
+                <div class="mapa">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12284.924791865995!2d-99.1442123663209!3d23.735609096143172!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86795132d7b7f193%3A0x42b200757d7f08d6!2sCd%20Victoria%2C%20Tamps.!5e0!3m2!1ses!2smx!4v1601685025139!5m2!1ses!2smx"
+                        frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                </div>
+                <div class="infoContacto">
+                    <p class="header">DIMERCOM</p>
+                    <p class="texto">Av. 31 Poniente 109 Local B Colonia Chulavista Puebla,Pue C.P:72420</p>
+                    <p class="texto">01.22 22 46 00 07</p>
+                    <p class="texto">hola@dimercom.mx</p>
+                </div>
+            </div>
+        </section>
         <script type="text/javascript" src="./js/jquery-3.5.1.min.js"></script>
         <script type="text/javascript" src="./js/main.js"></script>
     </body>
