--- a/index.html
+++ b/index.html
@@ -751,8 +751,36 @@
                     </div>
                     <div class="texto">
                         <p class="nombre">Tarjeta de video Gigabyte GTX 1650 D6 OC 4GB GDDR6</p>
+                        <div class="precios">
+                            <p class="precio">5,500</p>
+                            <p class="precioOferta">5,500</p>
+                        </div>
                         <p class="stock bold">Disponible en tienda y listo para enviar</p>
                         <p class="codigo"><span class="bold">Código Producto: </span>H410M-APRO</p>
+                        <div class="actions">
+                            <div class="tioDimer_toCartCantidad">
+                                <div class="toCartBoton menos"></div>
+                                <div class="toCartCantidad">1</div>
+                                <div class="toCartBoton mas"></div>
+                            </div>
+                            <div class="tioDimer_botonTextoIcono">
+                                <label class="labelBoton">Agregar al carrito</label>
+                                <div class="icono">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
+                                        <path d="M2 6h10l10 40h32l8-24H16"></path>
+                                        <circle cx="23" cy="54" r="4"></circle>
+                                        <circle cx="49" cy="54" r="4"></circle>
+                                    </svg>
+                                </div>
+                            </div>
+                            <div class="tioDimer_botonIcono">
+                                <div class="icono">
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
+                                        <path d="M47 5c-6.5 0-12.9 4.2-15 10-2.1-5.8-8.5-10-15-10A15 15 0 0 0 2 20c0 13 11 26 30 39 19-13 30-26 30-39A15 15 0 0 0 47 5z"></path>
+                                    </svg>
+                                </div>
+                            </div>
+                        </div>
                         <p class="descripcion">Alimentado por la arquitectura GeForce GTX 1650 NVIDIA Turing y GeForce Experience Integrado con 4 GB GDDR6 128 bit
                         interfaz de memoria WINDFORCE 2X Sistema de enfriamiento con ventiladores giratorios alternativos de 80 mm ventiladores
                         de hoja únicos Core Clock: 1710 MHz</p>
