--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                                                     <circle cx="27" cy="27" r="17"></circle>
                                                 </svg>
                                             </div>
-                                            <p>Ver detalle</p>
+                                            <p>Vista rapida</p>
                                         </div>
                                         <div class="imgProd" style="background-image: url(./img/producto1.png);"></div>
                                     </div>
@@ -183,13 +183,12 @@
                                                 <div class="icon"></div>
                                                 <p class="checkBoxLabel">Comparar</p>
                                             </div>
-                                            <div class="favoritos">
+                                            <div class="tioDimer_aFavs favoritos">
                                                 <div class="icono">
                                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
                                                         <path d="M47 5c-6.5 0-12.9 4.2-15 10-2.1-5.8-8.5-10-15-10A15 15 0 0 0 2 20c0 13 11 26 30 39 19-13 30-26 30-39A15 15 0 0 0 47 5z"></path>
                                                     </svg>
                                                 </div>
-                                                <p>A favoritos</p>
                                             </div>
                                         </div>
                                     </div>
@@ -206,7 +205,7 @@
                                                     <circle cx="27" cy="27" r="17"></circle>
                                                 </svg>
                                             </div>
-                                            <p>Ver detalle</p>
+                                            <p>Vista rapida</p>
                                         </div>
                                     </div>
                                     <a class="info" href="#">
@@ -227,13 +226,12 @@
                                                 <div class="icon"></div>
                                                 <p class="checkBoxLabel">Comparar</p>
                                             </div>
-                                            <div class="favoritos">
+                                            <div class="tioDimer_aFavs favoritos">
                                                 <div class="icono">
                                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
                                                         <path d="M47 5c-6.5 0-12.9 4.2-15 10-2.1-5.8-8.5-10-15-10A15 15 0 0 0 2 20c0 13 11 26 30 39 19-13 30-26 30-39A15 15 0 0 0 47 5z"></path>
                                                     </svg>
                                                 </div>
-                                                <p>A favoritos</p>
                                             </div>
                                         </div>
                                     </div>
@@ -250,7 +248,7 @@
                                                     <circle cx="27" cy="27" r="17"></circle>
                                                 </svg>
                                             </div>
-                                            <p>Ver detalle</p>
+                                            <p>Vista rapida</p>
                                         </div>
                                     </div>
                                     <a class="info" href="#">
@@ -271,13 +269,12 @@
                                                 <div class="icon"></div>
                                                 <p class="checkBoxLabel">Comparar</p>
                                             </div>
-                                            <div class="favoritos">
+                                            <div class="tioDimer_aFavs favoritos">
                                                 <div class="icono">
                                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
                                                         <path d="M47 5c-6.5 0-12.9 4.2-15 10-2.1-5.8-8.5-10-15-10A15 15 0 0 0 2 20c0 13 11 26 30 39 19-13 30-26 30-39A15 15 0 0 0 47 5z"></path>
                                                     </svg>
                                                 </div>
-                                                <p>A favoritos</p>
                                             </div>
                                         </div>
                                     </div>
@@ -294,7 +291,7 @@
                                                     <circle cx="27" cy="27" r="17"></circle>
                                                 </svg>
                                             </div>
-                                            <p>Ver detalle</p>
+                                            <p>Vista rapida</p>
                                         </div>
                                     </div>
                                     <a class="info" href="#">
@@ -315,13 +312,12 @@
                                                 <div class="icon"></div>
                                                 <p class="checkBoxLabel">Comparar</p>
                                             </div>
-                                            <div class="favoritos">
+                                            <div class="tioDimer_aFavs favoritos">
                                                 <div class="icono">
                                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
                                                         <path d="M47 5c-6.5 0-12.9 4.2-15 10-2.1-5.8-8.5-10-15-10A15 15 0 0 0 2 20c0 13 11 26 30 39 19-13 30-26 30-39A15 15 0 0 0 47 5z"></path>
                                                     </svg>
                                                 </div>
-                                                <p>A favoritos</p>
                                             </div>
                                         </div>
                                     </div>
@@ -338,7 +334,7 @@
                                                     <circle cx="27" cy="27" r="17"></circle>
                                                 </svg>
                                             </div>
-                                            <p>Ver detalle</p>
+                                            <p>Vista rapida</p>
                                         </div>
                                     </div>
                                     <a class="info" href="#">
@@ -359,13 +355,12 @@
                                                 <div class="icon"></div>
                                                 <p class="checkBoxLabel">Comparar</p>
                                             </div>
-                                            <div class="favoritos">
+                                            <div class="tioDimer_aFavs favoritos">
                                                 <div class="icono">
                                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
                                                         <path d="M47 5c-6.5 0-12.9 4.2-15 10-2.1-5.8-8.5-10-15-10A15 15 0 0 0 2 20c0 13 11 26 30 39 19-13 30-26 30-39A15 15 0 0 0 47 5z"></path>
                                                     </svg>
                                                 </div>
-                                                <p>A favoritos</p>
                                             </div>
                                         </div>
                                     </div>
@@ -406,13 +401,12 @@
                                                 <div class="icon"></div>
                                                 <p class="checkBoxLabel">Comparar</p>
                                             </div>
-                                            <div class="favoritos">
+                                            <div class="tioDimer_aFavs favoritos">
                                                 <div class="icono">
                                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
                                                         <path d="M47 5c-6.5 0-12.9 4.2-15 10-2.1-5.8-8.5-10-15-10A15 15 0 0 0 2 20c0 13 11 26 30 39 19-13 30-26 30-39A15 15 0 0 0 47 5z"></path>
                                                     </svg>
                                                 </div>
-                                                <p>A favoritos</p>
                                             </div>
                                         </div>
                                     </div>
@@ -442,13 +436,12 @@
                                                 <div class="icon"></div>
                                                 <p class="checkBoxLabel">Comparar</p>
                                             </div>
-                                            <div class="favoritos">
+                                            <div class="tioDimer_aFavs favoritos">
                                                 <div class="icono">
                                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
                                                         <path d="M47 5c-6.5 0-12.9 4.2-15 10-2.1-5.8-8.5-10-15-10A15 15 0 0 0 2 20c0 13 11 26 30 39 19-13 30-26 30-39A15 15 0 0 0 47 5z"></path>
                                                     </svg>
                                                 </div>
-                                                <p>A favoritos</p>
                                             </div>
                                         </div>
                                     </div>
@@ -478,13 +471,12 @@
                                                 <div class="icon"></div>
                                                 <p class="checkBoxLabel">Comparar</p>
                                             </div>
-                                            <div class="favoritos">
+                                            <div class="tioDimer_aFavs favoritos">
                                                 <div class="icono">
                                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
                                                         <path d="M47 5c-6.5 0-12.9 4.2-15 10-2.1-5.8-8.5-10-15-10A15 15 0 0 0 2 20c0 13 11 26 30 39 19-13 30-26 30-39A15 15 0 0 0 47 5z"></path>
                                                     </svg>
                                                 </div>
-                                                <p>A favoritos</p>
                                             </div>
                                         </div>
                                     </div>
@@ -514,13 +506,12 @@
                                                 <div class="icon"></div>
                                                 <p class="checkBoxLabel">Comparar</p>
                                             </div>
-                                            <div class="favoritos">
+                                            <div class="tioDimer_aFavs favoritos">
                                                 <div class="icono">
                                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
                                                         <path d="M47 5c-6.5 0-12.9 4.2-15 10-2.1-5.8-8.5-10-15-10A15 15 0 0 0 2 20c0 13 11 26 30 39 19-13 30-26 30-39A15 15 0 0 0 47 5z"></path>
                                                     </svg>
                                                 </div>
-                                                <p>A favoritos</p>
                                             </div>
                                         </div>
                                     </div>
@@ -550,13 +541,12 @@
                                                 <div class="icon"></div>
                                                 <p class="checkBoxLabel">Comparar</p>
                                             </div>
-                                            <div class="favoritos">
+                                            <div class="tioDimer_aFavs favoritos">
                                                 <div class="icono">
                                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
                                                         <path d="M47 5c-6.5 0-12.9 4.2-15 10-2.1-5.8-8.5-10-15-10A15 15 0 0 0 2 20c0 13 11 26 30 39 19-13 30-26 30-39A15 15 0 0 0 47 5z"></path>
                                                     </svg>
                                                 </div>
-                                                <p>A favoritos</p>
                                             </div>
                                         </div>
                                     </div>
