Detalle del producto+

--- a/index.html
+++ b/index.html
@@ -403,6 +403,15 @@
               <div class="tioDimer_producto slideX">
                 <div class="innerProd">
                   <div class="imgWrapper">
+                    <div class="detalleRapido" data-id="1">
+                      <div class="icono">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
+                          <path d="M39.049 39.049L56 56"></path>
+                          <circle cx="27" cy="27" r="17"></circle>
+                        </svg>
+                      </div>
+                      <p>Vista rapida</p>
+                    </div>
                     <div class="imgProd" style="background-image: url(./img/producto1.png);"></div>
                   </div>
                   <a class="info" href="#">
@@ -440,6 +449,15 @@
               <div class="tioDimer_producto slideX">
                 <div class="innerProd">
                   <div class="imgWrapper">
+                    <div class="detalleRapido" data-id="2">
+                      <div class="icono">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
+                          <path d="M39.049 39.049L56 56"></path>
+                          <circle cx="27" cy="27" r="17"></circle>
+                        </svg>
+                      </div>
+                      <p>Vista rapida</p>
+                    </div>
                     <div class="imgProd" style="background-image: url(./img/producto2.png);"></div>
                   </div>
                   <a class="info" href="#">
@@ -477,6 +495,15 @@
               <div class="tioDimer_producto slideX">
                 <div class="innerProd">
                   <div class="imgWrapper">
+                    <div class="detalleRapido" data-id="3">
+                      <div class="icono">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
+                          <path d="M39.049 39.049L56 56"></path>
+                          <circle cx="27" cy="27" r="17"></circle>
+                        </svg>
+                      </div>
+                      <p>Vista rapida</p>
+                    </div>
                     <div class="imgProd" style="background-image: url(./img/producto3.png);"></div>
                   </div>
                   <a class="info" href="#">
@@ -514,6 +541,15 @@
               <div class="tioDimer_producto slideX">
                 <div class="innerProd">
                   <div class="imgWrapper">
+                    <div class="detalleRapido" data-id="4">
+                      <div class="icono">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
+                          <path d="M39.049 39.049L56 56"></path>
+                          <circle cx="27" cy="27" r="17"></circle>
+                        </svg>
+                      </div>
+                      <p>Vista rapida</p>
+                    </div>
                     <div class="imgProd" style="background-image: url(./img/producto4.png);"></div>
                   </div>
                   <a class="info" href="#">
@@ -551,6 +587,15 @@
               <div class="tioDimer_producto slideX">
                 <div class="innerProd">
                   <div class="imgWrapper">
+                    <div class="detalleRapido" data-id="5">
+                      <div class="icono">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
+                          <path d="M39.049 39.049L56 56"></path>
+                          <circle cx="27" cy="27" r="17"></circle>
+                        </svg>
+                      </div>
+                      <p>Vista rapida</p>
+                    </div>
                     <div class="imgProd" style="background-image: url(./img/producto5.png);"></div>
                   </div>
                   <a class="info" href="#">
